@@ -6,7 +6,7 @@ x.x.x vs. 1.7.2
 
 
   8 Enhancements
-  1 Bugfixes
+  2 Bugfixes
 
 ----------------------------------------------------------------------
 x.x.x
@@ -39,8 +39,11 @@ x.x.x
 
   Bug fixes:
   
-  - <context> should be ignored in XLIFF files  
+  - HTML filter loses html-encoded characters if not supported
   http://sourceforge.net/support/tracker.php?aid=1800677
+
+  - <context> should be ignored in XLIFF files  
+  http://sourceforge.net/support/tracker.php?aid=1802000
 
 ----------------------------------------------------------------------
  OmegaT 1.7.2 Changes
